Reporting of total javac errors, passing of java source version, bump of lsif-java version